--- a/src/android/app/src/main/res/layout/list_item_setting.xml
+++ b/src/android/app/src/main/res/layout/list_item_setting.xml
@@ -10,7 +10,7 @@
     android:focusable="true"
     android:gravity="center_vertical"
     android:minHeight="72dp"
-    android:padding="16dp">
+    android:padding="@dimen/spacing_large">
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -60,6 +60,7 @@
                 android:textAlignment="viewStart"
                 android:textStyle="bold"
                 android:textSize="13sp"
+                android:visibility="gone"
                 tools:text="1x" />
 
         </LinearLayout>
