--- a/src/android/app/src/main/res/layout/list_item_setting_switch.xml
+++ b/src/android/app/src/main/res/layout/list_item_setting_switch.xml
@@ -8,7 +8,9 @@
     android:clickable="true"
     android:focusable="true"
     android:minHeight="72dp"
-    android:padding="16dp">
+    android:paddingVertical="@dimen/spacing_large"
+    android:paddingStart="@dimen/spacing_large"
+    android:paddingEnd="24dp">
 
     <com.google.android.material.materialswitch.MaterialSwitch
         android:id="@+id/switch_widget"
@@ -22,7 +24,7 @@
         android:layout_height="wrap_content"
         android:layout_alignParentTop="true"
         android:layout_centerVertical="true"
-        android:layout_marginEnd="24dp"
+        android:layout_marginEnd="@dimen/spacing_large"
         android:layout_toStartOf="@+id/switch_widget"
         android:gravity="center_vertical"
         android:orientation="vertical">
