--- a/src/android/app/src/main/res/layout/fragment_games.xml
+++ b/src/android/app/src/main/res/layout/fragment_games.xml
@@ -6,22 +6,102 @@
     android:layout_height="match_parent"
     android:background="?attr/colorSurface">
 
+    <LinearLayout
+        android:id="@+id/header"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal"
+        android:layout_marginTop="16dp"
+        android:layout_marginHorizontal="30dp"
+        app:layout_constraintTop_toTopOf="parent">
+
+        <com.google.android.material.textview.MaterialTextView
+            android:id="@+id/title"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Mandarine"
+            android:textAppearance="@style/TextAppearance.Material3.HeadlineLarge"
+            android:textSize="24sp"
+            android:textStyle="bold" />
+
+        <Space
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_weight="1" />
+
+        <com.google.android.material.card.MaterialCardView
+            android:id="@+id/view_button"
+            style="?attr/materialCardViewFilledStyle"
+            android:layout_width="42dp"
+            android:layout_height="42dp"
+            app:cardCornerRadius="21dp">
+
+            <ImageView
+                android:layout_width="11dp"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center"
+                android:src="@drawable/ic_eye"
+                app:tint="?attr/colorOnSurfaceVariant" />
+
+        </com.google.android.material.card.MaterialCardView>
+
+        <Space
+            android:layout_width="15dp"
+            android:layout_height="wrap_content" />
+
+        <com.google.android.material.card.MaterialCardView
+            android:id="@+id/filter_button"
+            style="?attr/materialCardViewFilledStyle"
+            android:layout_width="42dp"
+            android:layout_height="42dp"
+            app:cardCornerRadius="21dp">
+
+            <ImageView
+                android:layout_width="18dp"
+                android:layout_height="18dp"
+                android:layout_gravity="center"
+                android:src="@drawable/ic_filter"
+                app:tint="?attr/colorOnSurfaceVariant" />
+
+        </com.google.android.material.card.MaterialCardView>
+
+        <Space
+            android:layout_width="15dp"
+            android:layout_height="wrap_content" />
+
+        <com.google.android.material.card.MaterialCardView
+            android:id="@+id/settings_button"
+            style="?attr/materialCardViewFilledStyle"
+            android:layout_width="42dp"
+            android:layout_height="42dp"
+            app:cardCornerRadius="21dp">
+
+            <ImageView
+                android:layout_width="18dp"
+                android:layout_height="18dp"
+                android:layout_gravity="center"
+                android:src="@drawable/ic_settings"
+                app:tint="?attr/colorOnSurfaceVariant" />
+
+        </com.google.android.material.card.MaterialCardView>
+
+    </LinearLayout>
+
     <FrameLayout
         android:id="@+id/frame_search"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_marginStart="15dp"
-        android:layout_marginTop="9dp"
-        android:layout_marginEnd="6dp"
+        android:layout_marginTop="16dp"
+        android:layout_marginHorizontal="15dp"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toStartOf="@+id/view_button"
-        app:layout_constraintTop_toTopOf="parent">
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/header">
 
         <com.google.android.material.card.MaterialCardView
             android:id="@+id/search_background"
             style="?attr/materialCardViewFilledStyle"
             android:layout_width="match_parent"
-            android:layout_height="42dp"
+            android:layout_height="48dp"
             app:cardCornerRadius="21dp">
 
             <LinearLayout
@@ -66,66 +146,6 @@
         </com.google.android.material.card.MaterialCardView>
 
     </FrameLayout>
-
-    <com.google.android.material.card.MaterialCardView
-        android:id="@+id/view_button"
-        style="?attr/materialCardViewFilledStyle"
-        android:layout_width="42dp"
-        android:layout_height="42dp"
-        android:layout_marginTop="9dp"
-        android:layout_marginEnd="15dp"
-        app:cardCornerRadius="21dp"
-        app:layout_constraintEnd_toStartOf="@id/filter_button"
-        app:layout_constraintBottom_toBottomOf="@id/frame_search">
-
-        <ImageView
-            android:layout_width="18dp"
-            android:layout_height="18dp"
-            android:layout_gravity="center"
-            android:src="@drawable/ic_eye"
-            app:tint="?attr/colorOnSurfaceVariant" />
-
-    </com.google.android.material.card.MaterialCardView>
-
-    <com.google.android.material.card.MaterialCardView
-        android:id="@+id/filter_button"
-        style="?attr/materialCardViewFilledStyle"
-        android:layout_width="42dp"
-        android:layout_height="42dp"
-        android:layout_marginTop="9dp"
-        android:layout_marginEnd="15dp"
-        app:cardCornerRadius="21dp"
-        app:layout_constraintEnd_toStartOf="@id/settings_button"
-        app:layout_constraintBottom_toBottomOf="@id/frame_search">
-
-        <ImageView
-            android:layout_width="18dp"
-            android:layout_height="18dp"
-            android:layout_gravity="center"
-            android:src="@drawable/ic_filter"
-            app:tint="?attr/colorOnSurfaceVariant" />
-
-    </com.google.android.material.card.MaterialCardView>
-
-    <com.google.android.material.card.MaterialCardView
-        android:id="@+id/settings_button"
-        style="?attr/materialCardViewFilledStyle"
-        android:layout_width="42dp"
-        android:layout_height="42dp"
-        android:layout_marginTop="9dp"
-        android:layout_marginEnd="15dp"
-        app:cardCornerRadius="21dp"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintBottom_toBottomOf="@id/frame_search">
-
-        <ImageView
-            android:layout_width="18dp"
-            android:layout_height="18dp"
-            android:layout_gravity="center"
-            android:src="@drawable/ic_settings"
-            app:tint="?attr/colorOnSurfaceVariant" />
-
-    </com.google.android.material.card.MaterialCardView>
 
     <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
         android:id="@+id/swipe_refresh"
