--- a/src/android/app/src/main/res/layout/fragment_games.xml
+++ b/src/android/app/src/main/res/layout/fragment_games.xml
@@ -4,7 +4,8 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="?attr/colorSurface">
+    android:background="?attr/colorSurface"
+>
 
     <LinearLayout
         android:id="@+id/header"
@@ -12,76 +13,87 @@
         android:layout_height="wrap_content"
         android:orientation="horizontal"
         android:layout_marginTop="16dp"
-        android:layout_marginHorizontal="30dp"
-        app:layout_constraintTop_toTopOf="parent">
+        android:layout_marginHorizontal="20dp"
+        app:layout_constraintTop_toTopOf="parent"
+    >
 
         <com.google.android.material.textview.MaterialTextView
             android:id="@+id/title"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Mandarine"
+            android:text="@string/app_name"
             android:textAppearance="@style/TextAppearance.Material3.HeadlineLarge"
-            android:textSize="24sp"
-            android:textStyle="bold" />
+            android:textSize="27sp"
+            android:textStyle="bold"
+        />
 
         <Space
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:layout_weight="1" />
+            android:layout_weight="1"
+        />
 
         <com.google.android.material.card.MaterialCardView
             android:id="@+id/view_button"
             style="?attr/materialCardViewFilledStyle"
             android:layout_width="42dp"
             android:layout_height="42dp"
-            app:cardCornerRadius="21dp">
+            app:cardCornerRadius="21dp"
+        >
 
             <ImageView
-                android:layout_width="11dp"
-                android:layout_height="wrap_content"
+                android:layout_width="18dp"
+                android:layout_height="18dp"
                 android:layout_gravity="center"
                 android:src="@drawable/ic_eye"
-                app:tint="?attr/colorOnSurfaceVariant" />
+                app:tint="?attr/colorOnSurfaceVariant"
+            />
 
         </com.google.android.material.card.MaterialCardView>
 
         <Space
             android:layout_width="15dp"
-            android:layout_height="wrap_content" />
+            android:layout_height="wrap_content"
+        />
 
         <com.google.android.material.card.MaterialCardView
             android:id="@+id/filter_button"
             style="?attr/materialCardViewFilledStyle"
             android:layout_width="42dp"
             android:layout_height="42dp"
-            app:cardCornerRadius="21dp">
+            app:cardCornerRadius="21dp"
+        >
 
             <ImageView
                 android:layout_width="18dp"
                 android:layout_height="18dp"
                 android:layout_gravity="center"
                 android:src="@drawable/ic_filter"
-                app:tint="?attr/colorOnSurfaceVariant" />
+                app:tint="?attr/colorOnSurfaceVariant"
+            />
 
         </com.google.android.material.card.MaterialCardView>
 
         <Space
             android:layout_width="15dp"
-            android:layout_height="wrap_content" />
+            android:layout_height="wrap_content"
+        />
 
         <com.google.android.material.card.MaterialCardView
             android:id="@+id/settings_button"
             style="?attr/materialCardViewFilledStyle"
             android:layout_width="42dp"
             android:layout_height="42dp"
-            app:cardCornerRadius="21dp">
+            app:cardCornerRadius="21dp"
+        >
 
             <ImageView
                 android:layout_width="18dp"
                 android:layout_height="18dp"
                 android:layout_gravity="center"
                 android:src="@drawable/ic_settings"
-                app:tint="?attr/colorOnSurfaceVariant" />
+                app:tint="?attr/colorOnSurfaceVariant"
+            />
 
         </com.google.android.material.card.MaterialCardView>
 
@@ -95,14 +107,16 @@
         android:layout_marginHorizontal="15dp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/header">
+        app:layout_constraintTop_toBottomOf="@id/header"
+    >
 
         <com.google.android.material.card.MaterialCardView
             android:id="@+id/search_background"
             style="?attr/materialCardViewFilledStyle"
             android:layout_width="match_parent"
             android:layout_height="48dp"
-            app:cardCornerRadius="21dp">
+            app:cardCornerRadius="21dp"
+        >
 
             <LinearLayout
                 android:id="@+id/search_container"
@@ -110,7 +124,8 @@
                 android:layout_height="match_parent"
                 android:layout_marginStart="18dp"
                 android:layout_marginEnd="42dp"
-                android:orientation="horizontal">
+                android:orientation="horizontal"
+            >
 
                 <ImageView
                     android:layout_width="21dp"
@@ -118,7 +133,8 @@
                     android:layout_gravity="center_vertical"
                     android:layout_marginEnd="18dp"
                     android:src="@drawable/ic_search"
-                    app:tint="?attr/colorOnSurfaceVariant" />
+                    app:tint="?attr/colorOnSurfaceVariant"
+                />
 
                 <EditText
                     android:id="@+id/search_text"
@@ -128,7 +144,8 @@
                     android:hint="@string/home_search_games"
                     android:inputType="text"
                     android:maxLines="1"
-                    android:imeOptions="flagNoFullscreen" />
+                    android:imeOptions="flagNoFullscreen"
+                />
 
             </LinearLayout>
 
@@ -141,7 +158,8 @@
                 android:background="?attr/selectableItemBackground"
                 android:src="@drawable/ic_clear"
                 android:visibility="invisible"
-                app:tint="?attr/colorOnSurfaceVariant" />
+                app:tint="?attr/colorOnSurfaceVariant"
+            />
 
         </com.google.android.material.card.MaterialCardView>
 
@@ -153,11 +171,13 @@
         android:layout_height="0dp"
         android:layout_marginTop="8dp"
         app:layout_constraintTop_toBottomOf="@id/frame_search"
-        app:layout_constraintBottom_toBottomOf="parent">
+        app:layout_constraintBottom_toBottomOf="parent"
+    >
 
         <RelativeLayout
             android:layout_width="match_parent"
-            android:layout_height="match_parent">
+            android:layout_height="match_parent"
+        >
 
             <com.google.android.material.textview.MaterialTextView
                 android:id="@+id/notice_text"
@@ -167,14 +187,22 @@
                 android:gravity="center"
                 android:padding="@dimen/spacing_large"
                 android:text="@string/empty_gamelist"
-                android:visibility="gone" />
+                android:visibility="gone"
+            />
 
             <androidx.recyclerview.widget.RecyclerView
                 android:id="@+id/grid_games"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:clipToPadding="false"
-                tools:listitem="@layout/card_game" />
+                android:scrollbarStyle="outsideOverlay"
+                android:scrollbars="vertical"
+                android:fadeScrollbars="true"
+                android:paddingHorizontal="4dp"
+                android:paddingVertical="4dp"
+                tools:listitem="@layout/card_game"
+            />
+
 
         </RelativeLayout>
 
@@ -192,6 +220,7 @@
         app:layout_constraintEnd_toEndOf="parent"
         android:textColor="?attr/colorOnPrimaryContainer"
         app:backgroundTint="?attr/colorPrimaryContainer"
-        app:iconTint="?attr/colorOnPrimaryContainer" />
+        app:iconTint="?attr/colorOnPrimaryContainer"
+    />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
