--- a/src/android/app/src/main/res/navigation/home_navigation.xml
+++ b/src/android/app/src/main/res/navigation/home_navigation.xml
@@ -7,7 +7,15 @@
     <fragment
         android:id="@+id/gamesFragment"
         android:name="io.github.mandarine3ds.mandarine.fragments.GamesFragment"
-        android:label="PlatformGamesFragment" />
+        android:label="PlatformGamesFragment">
+        <action
+            android:id="@+id/action_gamesFragment_to_homeSettingsFragment"
+            app:destination="@id/homeSettingsFragment"
+            app:enterAnim="@anim/slide_in_right"
+            app:exitAnim="@anim/slide_out_left"
+            app:popEnterAnim="@anim/slide_in_left"
+            app:popExitAnim="@anim/slide_out_right" />
+    </fragment>
 
     <fragment
         android:id="@+id/homeSettingsFragment"
@@ -38,11 +46,6 @@
             app:popUpTo="@id/firstTimeSetupFragment"
             app:popUpToInclusive="true" />
     </fragment>
-
-    <fragment
-        android:id="@+id/searchFragment"
-        android:name="io.github.mandarine3ds.mandarine.fragments.SearchFragment"
-        android:label="SearchFragment" />
 
     <fragment
         android:id="@+id/aboutFragment"
